--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 .signin {
     height: 30px;
     width: 70px;
-    background-color:rgb(43, 133, 223);
+    background-color: #4285f4;
     border: 0px solid;
     border-radius: 3px;
     color: white;
@@ -123,27 +123,23 @@
     display: flex;
     align-items: center;
     list-style-type: none;
+    border-top: 1px solid #e4e4e4;
     font-size: 15px;
     font-family: arial;
-    background-color: rgb(204, 204, 204);
+    background-color: #f2f2f2;
     margin-bottom: 0px;
     margin-left: 0px;
     width:100%;
     height: 40px;
     min-width: 970px;
     color: gray;
-}
-.lbotnav, .rbotnav {
-    color: black;
-    text-decoration: none;
-    padding-left: 9px;
-    padding-right: 20px;
-}
+} 
 .privacy {
     margin-left: auto;
 
-} .lbotnav, .rbotnav {
-    color: rgb(78, 78, 78);
+} 
+.lbotnav, .rbotnav {
+    color: #6d6d6d;
     text-decoration: none;
     padding-left: 9px;
     padding-right: 10px;
